Fix Accordions overflow

--- a/src/components/misc/components.module.scss
+++ b/src/components/misc/components.module.scss
@@ -6,7 +6,14 @@
 
   span {
     opacity: 0;
-    padding: 0 10px;
+
+    &:first-child {
+      padding-right: 10px;
+    }
+
+    &:last-child {
+      padding-left: 10px;
+    }
   }
 
   &:hover {
